# hawktracer-parser

./: .gitignore  Cargo.toml  README.md
src/: data_provider.rs  data_struct_reader.rs  event.rs  event_klass.rs  event_reader.rs  lib.rs  reader.rs  registry.rs  registry_updater.rs
test_utilities/: Cargo.toml
test_utilities/src/: lib.rs
